<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johndoe.mtourismbeta.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:weightSum="1">

        <ViewFlipper
            android:id="@+id/flipper1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:flipInterval="2000"
            android:inAnimation="@anim/slide_in_right"
            android:outAnimation="@anim/slide_out_left"
            android:layout_centerHorizontal="true">

            <ImageView
                android:src="@drawable/img5"
                android:background="@drawable/img5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img5" />

            <ImageView
                android:background="@drawable/img1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img1" />

            <ImageView
                android:background="@drawable/img2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img2" />

            <ImageView
                android:background="@drawable/img3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img3"  />

            <ImageView
                android:background="@drawable/img4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/str_img4" />



        </ViewFlipper>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="130dp"
            android:text="@string/casablanca"
            style="@style/ImageTitle"
            android:id="@+id/home_text" />

       </RelativeLayout>



</FrameLayout>
